# feature_extractor

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: huggingface-migration-feasibility.md
docs/superpowers/plans/: 2026-06-13-feature-extractor-validation.md  2026-06-21-vendor-trim-thirdparty.md  2026-06-22-depthpro-hf-only.md  2026-06-22-dino-hf-only.md  2026-06-22-dinov3-hf-backend.md  2026-06-30-full-frame-streaming-phase1.md  2026-07-01-full-frame-streaming-phase2-depth.md  2026-07-01-full-frame-streaming-phase3-pose.md
docs/superpowers/specs/: 2026-06-13-feature-extractor-validation-design.md  2026-06-16-dinov3-vits16-support-design.md  2026-06-21-vendor-trim-thirdparty-design.md  2026-06-22-depthpro-hf-only-design.md  2026-06-22-dino-hf-only-design.md  2026-06-22-dinov3-hf-backend-design.md  2026-06-30-full-frame-streaming-extraction-design.md
docs/validation/: README.md  sample_report.md
scripts/: compare_features.py  probe_pose_window.py  trace_thirdparty_usage.py
scripts/keep/: VGGT.txt  Video-Depth-Anything.txt  dinov3.txt  ml-depth-pro.txt
src/feature_extractor/: __init__.py  assets.py  chunking.py  cli.py  storage.py  video_io.py
src/feature_extractor/extractors/: __init__.py  depth.py  depth_streaming.py  dino.py  pose.py  pose_streaming.py
src/feature_extractor/validation/: __init__.py  cli.py  perf.py  report.py  sanity.py  synthetic.py
src/feature_extractor/virtualization/: README.md  export_dino_video.py
tests/: test_assets.py  test_chunking.py  test_cli_streaming.py  test_depth_streaming.py  test_depthpro_hf.py  test_dino_config.py  test_dino_hf_config.py  test_dino_hf_tokens.py  test_dino_streaming.py  test_package_exports.py  test_pose_streaming.py  test_storage_chunked.py  test_storage_import.py  test_validation_report.py  test_validation_sanity.py  test_video_io.py
