[project]
name = "feature_extractor"
version = "0.1.0"
description = "Standalone DINO/Depth/Pose feature extraction extracted from egoWM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=1.26.0",
    "h5py>=3.13.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "decord>=0.6.0",
    "timm>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
feature-extract = "feature_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_extractor"]
